# fastembed-rs

./: Cargo.toml
src/: common.rs
src/reranking/: impl.rs  init.rs  mod.rs
src/sparse_text_embedding/: impl.rs
src/text_embedding/: impl.rs  init.rs
