[package]
name = "fastembed"
version = "5.9.0"
edition = "2021"
description = "Library for generating vector embeddings, reranking locally."
license = "Apache-2.0"
authors = [
  "Anush008 <anushshetty90@gmail.com>",
  "Josh Niemelä <josh@jniemela.dk>",
  "GrisiaEvy <a115020115@gmail.com>",
  "George MacKerron <georgemackerron@neon.tech>",
  "Timon Vonk <mail@timonv.nl>",
  "Luya Wang <luya.wang@qq.com>",
  "Tri <tri@triandco.com>",
  "Denny Wong <denwong47@hotmail.com>",
  "Alex Rozgo <alex.rozgo@gmail.com>",
]
documentation = "https://docs.rs/fastembed"
repository = "https://github.com/Anush008/fastembed-rs"
homepage = "https://crates.io/crates/fastembed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
hf-hub = { version = "0.4.1", default-features = false, optional = true }
image = { version = "0.25.2", optional = true }
ndarray = { version = "0.17", default-features = false }
safetensors = { version = "0.7" }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
candle-nn = { version = "0.9.1", optional = true }
candle-core = { version = "0.9.1", optional = true }

intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
  "ndarray", "std"
] }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# _getrandom_alias_4 = { version = "0.4.1", package = "getrandom", features = [
#     "wasm_js",
# ] }
# _getrandom_alias_3 = { version = "0.3.4", package = "getrandom", features = [
#     "wasm_js",
# ] }
# _getrandom_alias_2 = { version = "0.2.17", package = "getrandom", features = [
#     "js",
# ] }
futures = { version = "0.3.31", features = ["std"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
  "ndarray", "std", "alternative-backend", "webgpu"
] }
ort-web = { version = "0.1.0" }
# ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
# rustls-pki-types = { version = "1.13.2", features = ["web"] }
tokenizers = { version = "0.22.0", default-features = false, features = ["unstable_wasm"] }

[patch.crates-io]
hf-hub = { git = "https://github.com/shermansiu/hf-hub", branch = "feat/wasm" }
ort = { git = "https://github.com/shermansiu/ort", branch = "feat/wasm" }
ort-sys = { git = "https://github.com/shermansiu/ort", branch = "feat/wasm" }
ort-web = { git = "https://github.com/shermansiu/ort", branch = "feat/wasm" }

[features]
default = []
# default = ["ort-download-binaries-native-tls", "hf-hub-native-tls", "image-models"]

hf-hub = ["dep:hf-hub", "hf-hub?/ureq"]
hf-hub-native-tls = ["hf-hub", "hf-hub?/native-tls"]
hf-hub-rustls-tls = ["hf-hub", "hf-hub?/rustls-tls"]

ort-download-binaries = ["ort-download-binaries-native-tls"]
ort-download-binaries-native-tls = ["ort/download-binaries", "ort/tls-native"]
ort-download-binaries-rustls-tls = ["ort/download-binaries", "ort/tls-rustls"]
ort-load-dynamic = ["ort/load-dynamic"]

qwen3 = ["dep:candle-core", "dep:candle-nn", "hf-hub"]

image-models = ["image"]
mkl = ["qwen3","dep:intel-mkl-src", "candle-nn/mkl", "candle-core/mkl"]
accelerate = ["qwen3", "dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["qwen3", "candle-core/cuda", "candle-nn/cuda"]
cudnn = ["qwen3", "candle-core/cudnn", "candle-nn/cudnn", "cuda"]
metal = ["qwen3", "candle-core/metal", "candle-nn/metal"]

# This feature does not change any code, but is used to limit tests if
# the user does not have `optimum-cli` or even python installed.
optimum-cli = []

# For compatibility recommend using hf-hub-native-tls
online = ["hf-hub-native-tls"]
